--- a/assets/style/stylesheet.css
+++ b/assets/style/stylesheet.css
@@ -72,7 +72,7 @@ header {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url('/Project/assets/images/cover.png');
+  background-image: url('../images/cover.png');
   background-size: cover;
   color: #005544;
   text-align: center;
